# vcpkg-tutorial

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: component-detection.yml  dependencies.yml
cmake/: gcc-arm-none-eabi-triplet.cmake  gcc-arm-none-eabi.cmake  project-configuration.cmake
inc/app/: app_main.h  app_version.h  app_version.h.in
ports/cmsis/: CMakeLists.txt  cmsisConfig.cmake  cmsisConfig.cmake.in  portfile.cmake  vcpkg.json
ports/cmsis-device-l5/: CMakeLists.txt  cmsis-device-l5Config.cmake  cmsis-device-l5Config.cmake.in  portfile.cmake  vcpkg.json
ports/stm32l5xx-hal-driver/: CMakeLists.txt  portfile.cmake  stm32l5xx-hal-driverConfig.cmake  stm32l5xx-hal-driverConfig.cmake.in  vcpkg.json
src/: main.c
src/app/: app_main.c  app_version.c
startup/: STM32L552xE_FLASH_Example.ld
versions/: baseline.json
versions/c-/: cmsis-device-l5.json  cmsis.json
versions/s-/: stm32l5xx-hal-driver.json
